# expertise_direction

./: benchmark.csv  expert_nonexpert.csv  expertise_activations_layer_15.pt  expertise_steering_benchmark_results.csv  expertise_steering_responses_20250823_181329.json  expertise_steering_responses_20250823_222243.json  main.ipynb  mean_activations_layer_15.pt  pyproject.toml  random_sentences.csv  refusal_vector.pt  refusal_vector_qwen2_L15_residpost.pt  results.pkl  run_evals_gpt.py
model_utils/: gemma_model.py  llama2_model.py  llama3_model.py  model_base.py  model_factory.py  qwen_model.py  yi_model.py
splits/: harmful_train.json
src/: select_direction.py
src/nb_refusal/: main.py  test_vector.py
src/nb_refusal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: hook_utils.py
